# qt-qml-project-skeleton

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md
src/helloworld/AppComponents/: CMakeLists.txt
src/helloworld/app/: CMakeLists.txt  main.cpp
src/helloworld/app/qml/: FramedImage.qml  main.qml
src/helloworld/core/: CMakeLists.txt
src/helloworld/core/core/: core.cpp  core.h
src/helloworld/core/test/: CMakeLists.txt
